--- a/activity.html
+++ b/activity.html
@@ -34,7 +34,7 @@
                     <a href="detailsCreators.html">creator details</a>
                 </div>
             </div>
-            <a href="" class="activity">activity</a>
+            <a href="activity.html" class="activity">activity</a>
             <div class="dropdownMenu">
                 <button class="dropBtnMenu">page +</button>
                 <div class="dropdown">
@@ -47,17 +47,8 @@
                     <a href="404Errors.html">404 error</a>
                 </div>
             </div>
-            <div class="dropdownMenu">
-                <button class="dropBtnMenu">blog +</button>
-                <div class="dropdown">
-                    <a href="blog.html">blog</a>
-                    <a href="">blog grid</a>
-                    <a href="">blog left sidebar</a>
-                    <a href="">blog right sidebar</a>
-                    <a href="">blog details</a>
-                </div>
-            </div>
-            <a href="" class="contactUs">contact us</a>
+            <a href="blog.html" class="activity">blog</a>
+            <a href="contact.html" class="contactUs">contact us</a>
         </div>
 
         <div class="searchUserBtn">
@@ -111,13 +102,13 @@
                         <ul>
                             <li><a href="showcase.html">explore artworks</a></li>
                             <li><a href="details.html">explore details</a></li>
-                            <li><a href="">explore creator</a></li>
+                            <li><a href="allCreator.html">explore creator</a></li>
                             <li><a href="detailsCreators.html">explore details</a></li>
                         </ul>
                     </div>
                 </li>
                 <li>
-                    <h3><a href="">activity</a></h3>
+                    <h3><a href="activity.html">activity</a></h3>
                 </li>
                 <li>
                     <h3><a href="">page</a><i class="fas fa-chevron-down droped3" id="droped3"></i></h3>
@@ -134,19 +125,10 @@
                     </div>
                 </li>
                 <li>
-                    <h3><a href="">blog</a> <i class="fas fa-chevron-down droped4" id="droped4"></i></h3>
-                    <div class="navigator4">
-                        <ul>
-                            <li><a href="blog.html">blog</a></li>
-                            <li><a href="">blog grid</a></li>
-                            <li><a href="">blog left sidebar</a></li>
-                            <li><a href="">blog right sidebar</a></li>
-                            <li><a href="">blog details</a></li>
-                        </ul>
-                    </div>
+                    <h3><a href="blog.html">blog</a> <i class="fas fa-chevron-down droped4" id="droped4"></i></h3>
                 </li>
                 <li>
-                    <h3><a href="">contact us</a></h3>
+                    <h3><a href="contact.html">contact us</a></h3>
                 </li>
             </ul>
         </div>
@@ -269,12 +251,12 @@
         </div>
         <div class="sideActivity">
             <ul>
-                <li>listing</li>
-                <li>likes</li>
-                <li>sales</li>
-                <li>following</li>
-                <li>recents</li>
-                <li>transfers</li>
+                <li><i class="fas fa-id-card"></i> listing</li>
+                <li><i class="fas fa-thumbs-up"></i> likes</li>
+                <li><i class="fas fa-shopping-basket"></i> sales</li>
+                <li><i class="fas fa-check-circle"></i> following</li>
+                <li><i class="fas fa-clock"></i> recents</li>
+                <li><i class="fas fa-credit-card"></i> transfers</li>
             </ul>
         </div>
     </section>
