--- a/showcase.html
+++ b/showcase.html
@@ -101,7 +101,7 @@
                     <div class="navigator2">
                         <ul>
                             <li><a href="showcase.html">explore artworks</a></li>
-                            <li><a href="details.html">explore details</a></li>
+                            <li><a href="exploredDetails.html">explore details</a></li>
                             <li><a href="allCreator.html">explore creator</a></li>
                             <li><a href="detailsCreators.html">explore details</a></li>
                         </ul>
@@ -433,6 +433,7 @@
         <p>Build With Love By N-Dev</p>
     </section>
 
+    <script src="script.js"></script>
 
 </body>
 
